force-app/main/default/objects/review__c/review__c.object-meta.xml
<CustomObject>
    <label>Review</label>
    <nameField>
        <displayFormat>Review# {00000000}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>