force-app/main/default/objects/review__c/fields/Event_Url__c.field-meta.xml
<CustomField>
    <fullName>Event_Url__c</fullName>
    <label>Event Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>