force-app/main/default/objects/review__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation</label>
    <referenceTo>Installation__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>