force-app/main/default/objects/review__c/fields/IP_Survey__c.field-meta.xml
<CustomField>
    <fullName>IP_Survey__c</fullName>
    <label>IP Survey</label>
    <length>20</length>
    <type>Text</type>
</CustomField>