force-app/main/default/objects/review__c/fields/Is_employee__c.field-meta.xml
<CustomField>
    <fullName>Is_employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is employee</label>
    <type>Checkbox</type>
</CustomField>