force-app/main/default/objects/review__c/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <label>Are you pleased with the sales represent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_HS</valueSetName>
    </valueSet>
</CustomField>