force-app/main/default/objects/review__c/fields/Question_3__c.field-meta.xml
<CustomField>
    <fullName>Question_3__c</fullName>
    <label>Are you pleased with our installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_HS</valueSetName>
    </valueSet>
</CustomField>