force-app/main/default/objects/review__c/fields/rateUs__c.field-meta.xml
<CustomField>
    <fullName>rateUs__c</fullName>
    <label>Rate Us</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>