force-app/main/default/objects/review__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>