force-app/main/default/objects/review__c/recordTypes/Review_Rep.recordType-meta.xml
<RecordType>
    <fullName>Review_Rep</fullName>
    <active>true</active>
    <label>Review - Rep</label>
</RecordType>