force-app/main/default/objects/review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>rateUs__c</columns>
    <columns>type__c</columns>
    <columns>city__c</columns>
    <columns>firstName__c</columns>
    <columns>lastName__c</columns>
    <columns>phone__c</columns>
    <columns>email__c</columns>
    <columns>description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>